Remove reference assemblies, update to use NuGet packages, remove signing

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,5 @@
 obj/
 bin/
 Help/
-!Reference Assemblies/*.dll
-!Reference Assemblies/SQLite/x86/*.dll
-!Reference Assemblies/SQLite/x64/*.dll
-Reference Assemblies/*.xml
+packages/
 Panama.xlsx
