--- a/Source/Panama.Database/Panama.Database.csproj
+++ b/Source/Panama.Database/Panama.Database.csproj
@@ -100,6 +100,9 @@
   <ItemGroup>
     <Compile Include="Database\IColumnRowImporter.cs" />
     <Compile Include="Database\DatabaseImporter.cs" />
+    <Compile Include="Database\Tables\ColorTable.cs">
+      <SubType>foo</SubType>
+    </Compile>
     <Compile Include="Database\Tables\DummyTable.cs">
       <SubType>foo</SubType>
     </Compile>
@@ -191,6 +194,7 @@
   <ItemGroup>
     <Content Include="Schema\author.ddl.sql" />
     <Content Include="Schema\author.import.sql" />
+    <Content Include="Schema\color.ddl.sql" />
     <Content Include="Schema\config.ddl.sql" />
     <Content Include="Schema\documenttype.import.sql" />
     <Content Include="Schema\documenttype.ddl.sql" />
