--- a/Source/Panama/Panama.csproj
+++ b/Source/Panama/Panama.csproj
@@ -295,6 +295,9 @@
     <Compile Include="View\EditControls\CredentialEdit.xaml.cs">
       <DependentUpon>CredentialEdit.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\EditControls\PublishedEdit.xaml.cs">
+      <DependentUpon>PublishedEdit.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\EditControls\ToolPreview.xaml.cs">
       <DependentUpon>ToolPreview.xaml</DependentUpon>
     </Compile>
@@ -539,6 +542,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\EditControls\CredentialEdit.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\EditControls\PublishedEdit.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -937,6 +944,9 @@
     <Resource Include="Resources\Images\Image.Chevron.Left.64.png" />
     <Resource Include="Resources\Images\Image.Chevron.Right.64.png" />
     <Resource Include="Resources\Images\Image.Chevron.Up.64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Image.Exclamation.64.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
