--- a/Source/Panama/packages.config
+++ b/Source/Panama/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net452" />
   <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net452" />
+  <package id="MimeKitLite" version="2.0.6" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net452" />
 </packages>
