Add filtering capability to message select window. Implement message display.

--- a/Source/Panama/Panama.csproj
+++ b/Source/Panama/Panama.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Other\ApplicationInfo.cs" />
     <Compile Include="Other\BindableBase.cs" />
     <Compile Include="Other\GeneralOption.cs" />
+    <Compile Include="Other\MimeKitMessage.cs" />
     <Compile Include="Other\PreviewMode.cs" />
     <Compile Include="Other\TitleVersionRenameItem.cs" />
     <Compile Include="Other\DocumentPreviewer.cs" />
