--- a/Source/Panama/Panama.csproj
+++ b/Source/Panama/Panama.csproj
@@ -258,6 +258,7 @@
     <Compile Include="ViewModel\DataGridPreviewViewModel.cs" />
     <Compile Include="ViewModel\StatisticsViewModel.cs" />
     <Compile Include="ViewModel\ToolConvertViewModel.cs" />
+    <Compile Include="ViewModel\ToolMessageSyncViewModel.cs" />
     <Compile Include="ViewModel\ToolScrambleViewModel.cs" />
     <Compile Include="ViewModel\ToolTitleListViewModel.cs" />
     <Compile Include="ViewModel\DataGridViewModelBase.cs" />
@@ -320,6 +321,9 @@
     </Compile>
     <Compile Include="View\ToolConvertView.xaml.cs">
       <DependentUpon>ToolConvertView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ToolMessageSyncView.xaml.cs">
+      <DependentUpon>ToolMessageSyncView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ToolScrambleView.xaml.cs">
       <DependentUpon>ToolScrambleView.xaml</DependentUpon>
@@ -584,6 +588,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="View\ToolConvertView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\ToolMessageSyncView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -973,6 +981,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\Image.Exclamation.64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Image.Sync.64.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
